mule-user-guide/v/3.5/session-variable-transformer-reference.adoc
= 会话变量转换器参考

使用*session variable*设置或删除与多个流，应用程序甚至服务器上的整个生命周期内的消息绑定的变量。 （相比之下，通过 link:/mule-user-guide/v/3.7/variable-transformer-reference[可变变压器]指定的变量只要与它们关联的消息保持在同一个流程中，就会一直存在。）要了解有关消息范围的更多信息，请参阅 link:/mule-user-guide/v/3.7/mule-concepts[骡子概念]。

*<<Complete Code Example>>*

会话变量变换器不同于变量变量和属性变换器。请参阅下表以比较这三台变压器。

[%header%autowidth.spread]
|===
|   |会话变量变量 |变量变量 |属性变量
| *Use*  |用于设置或删除与整个生命周期中当前消息绑定的变量，跨多个流，应用程序甚至服务器。 |使用设置或删除与当前流程相关的消息变量。 |用于设置，删除或复制消息出站范围的属性。
| *Persistence*  |使用会话变量变量设置的会话变量在整个消息生命周期中保持不变，而不考虑传输障碍。 |使用变量变量设置的变量仅保留一旦消息遇到出站连接器，出站作用域中的所有属性都将与消息一起以特定于传输的元数据的形式发送（HTTP标头用于HTTP出站连接，连接器）。
|===

一旦设置了会话变量，就可以使用Mule表达式中的*`sessionVars`*地图来调用它。例如，如果您已设置名称为"`SVname`"且值为"`SVvalue`"的会话变量，则可以稍后使用表达式`#[sessionVars.SVname]`调用该会话变量，该表达式的计算结果为{{4} }。

[WARNING]
请注意，会话变量链接到Mule消息，但不链接到MuleEvent。这意味着，如果您使用了复制消息的元素（例如 link:/mule-user-guide/v/3.6/async-scope-reference[异步范围]或 link:/mule-user-guide/v/3.7/scatter-gather[分散收集组件]），那么流变量的更改将不会在这些复制消息之间持续存在，即使他们从一开始。

== 配置

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....

image:session_transformer.png[session_transformer]

[%header%autowidth.spread]
|===
|Field |Value |Description |XML
|*Display Name* |Session Variable |Customize to display a unique name for the transformer in your application. a|
[source, code, linenums]
----
doc:name="Session Variable"
----
|*Operation* |Set Session Variable |Select to set a new session variable on your message (as shown in example screenshot above). a|
[source, xml, linenums]
----
<set-session-variable>
----
| |Remove Session Variable |Select to delete an existing session variable from your message. a|
[source, xml, linenums]
----
<remove-session-variable>
----
|*Name* |String or Mule Expression |Specify the name for the session variable that you are creating, or identify the name of the session variable that you are removing. If you are removing session variables, this field accepts a wildcard "*" character. a|
[source, code, linenums]
----
variableName="MyNewSessionVariableName"
----
|*Value* |String or Mule Expression |Mule displays this field only if you are setting a new session variable. Specify the value using either a string or a Mule expression. a|
[source, code, linenums]
----
value="MyNewSessionVariableValue"
----
|===

....
[tab,title="XML Editor or Standalone"]
....

[source, code, linenums]
----
# Set session variable
     
<set-session-variable variableName="MyNewSessionVariableName" value="MyNewSessionVariableValue" doc:name="Session Variable"/>
     
     
# Remove session variable
<remove-session-variable variableName="NameofSessionVariabletoRemove" doc:name="Session Variable"/>
----

[%header%autowidth.spread]
|===
|Element |Description
|*set-session-variable* |Set a new variable on your message (as shown in example above).
|*remove-session-variable* |Delete an existing variable from your message.
|===

[%header,cols="2*"]
|===
|Element Attribute |Description
|*doc:name* a|
Customize to display a unique name for the transformer in your application.

Note: Attribute not required in Mule Standalone configuration.

|*variableName* a|
The name of the session variable that you are setting or removing. Can be a string or a Mule expression.

Note: If you are using the remove-session-variable element, you may use a wildcard "*" character. For example, a remove-session-variable transformer with the element `variableName="http.*"` will remove all variables whose names begin with "http." from the message.

|*value* |The value of the session variable that you are setting. This attribute is only relevant for the set-session-variable element. Can be a string or a Mule expression.
|===

....
------

== 示例

在很多情况下，消息通过多个流，应用程序甚至服务器。在这种情况下，将某种类型的元数据附加到消息中以便从所有系统的源头到最终目的地进行跟踪会很有用。在下面的例子中，我们设置了一个名为messageID的会话变量。此messageID包含一个唯一标识符，该标识符在消息的整个生命周期内保留（除非它被另一个会话变量转换器明确删除）。

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....

image:session_trans_example.png[session_trans_example] +

....
[tab,title="XML Editor or Standalone"]
....

[source, xml, linenums]
----
<flow name="SessionVariableTransformingFlow" doc:name="SessionVariableTransformingFlow">
   <http:inbound-endpoint host="localhost" port="8081" path="/" />
   <set-session-variable variableName="messageID" value="#[java.util.UUID.randomUUID().toString()]" doc:name="Set Message ID"/>
   <logger message="Variable set with #[sessionVars.messageID]" level="INFO"/>
   <remove-session-variable "NameofSessionVariabletoRemove" doc:name="Session Variable"/>
</flow>
----

....
------

== 完整的代码示例


*View namespace*

[source, xml, linenums]
----
<mule xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation" xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.4.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation=" http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd">
----



[source, xml, linenums]
----
<flow name="SessionVariableTransformingFlow" doc:name="SessionVariableTransformingFlow">
   <http:inbound-endpoint host="localhost" port="8081" path="/" />
   <set-session-variable variableName="messageID" value="#[java.util.UUID.randomUUID().toString()]" doc:name="Set Message ID"/>
   <logger message="Variable set with #[sessionVars.messageID]" level="INFO"/>
   <remove-session-variable "NameofSessionVariabletoRemove" doc:name="Session Variable"/>
</flow>
----


== 另请参阅

* 请参阅 link:/mule-user-guide/v/3.7/mule-concepts[骡子概念]以了解有关消息范围的更多信息。
* 阅读相关转换器 link:/mule-user-guide/v/3.7/variable-transformer-reference[可变变压器]和 link:/mule-user-guide/v/3.6/property-transformer-reference[属性变压器]，您可以使用它们为不同范围设置属性和变量。
* 了解如何使用Mule表达式语言使用`sessionVars`地图读取会话变量。
