mule-user-guide/v/3.8/session-variable-transformer-reference.adoc
= 会话变量转换器参考
:keywords: anypoint studio, session variables, variables, transformers


使用*session variable*在整个生命周期中设置或删除与消息绑定的变量，可能跨多个流，应用程序甚至服务器。会话变量很容易通过VM传输或流引用从一个流传播到另一个流，但不能通过 link:/mule-user-guide/v/3.8/http-connector[HTTP连接器]传播。相比之下，通过 link:/mule-user-guide/v/3.8/variable-transformer-reference[可变变压器]指定的变量只要与它们关联的消息保持在同一流程中，就会一直存在。要详细了解消息范围，请参阅 link:/mule-user-guide/v/3.8/mule-concepts[骡子概念]。


image:session-variable-transformer-reference-7b052.png[]


使用*session variable transformer*在整个生命周期中设置或删除与消息绑定的变量，可能跨多个流，应用程序甚至服务器。会话变量很容易通过VM传输或流引用从一个流传播到另一个流，但不能通过 link:/mule-user-guide/v/3.8/http-connector[HTTP连接器]传播。相比之下，通过 link:/mule-user-guide/v/3.8/variable-transformer-reference[可变变压器]指定的变量只要与它们关联的消息保持在同一流程中，就会一直存在。要详细了解消息范围，请参阅 link:/mule-user-guide/v/3.8/mule-concepts[骡子概念]。


<<Complete Code Example>>

会话变量变换器不同于变量变量和属性变换器。请参阅下表以比较这三台变压器。

[%header,cols="33a,33a,34a"]
|===
|会话变量变换器 |变量变换器 |属性变换器

| *Use:*设置或删除与多个流，应用程序甚至服务器上的整个生命周期绑定的当前消息的变量。 | *Use:*设置或删除消息上的变量，与当前流相关。 | *Use:*设置，删除或复制消息出站范围的属性。
| *Persistence*：使用会话变量变换器设置的会话变量会保留整个消息生命周期，而不管传输障碍如何， link:/mule-user-guide/v/3.8/http-connector[HTTP连接器]不会传播它们。{{5} } *Persistence*：使用变量变量设置的变量仅保留当前流并且不能穿过传输障碍。 | *Persistence*：一旦消息遇到出站连接器，出站范围与特定于传输的元数据（例如，HTTP出站连接器的HTTP头）一起以消息的形式发送。
|===

一旦设置了会话变量，就可以使用Mule表达式中的*`sessionVars`*地图来调用它。例如，如果您已设置名称为"`SVname`"且值为"`SVvalue`"的会话变量，则可以稍后使用表达式`#[sessionVars.SVname]`调用该会话变量，该表达式的计算结果为{{4} }。

[WARNING]
请注意，会话变量链接到Mule消息，但不链接到MuleEvent。这意味着，如果您使用了复制消息的元素（例如 link:/mule-user-guide/v/3.8/async-scope-reference[异步范围]或 link:/mule-user-guide/v/3.8/scatter-gather[分散收集组件]），那么流变量的更改将不会在这些复制消息之间持续存在，即使他们从一开始。

== 配置

[tabs]
------
[tab,title="Studio Visual Editor"]
....

image:session_transformer.png[session_transformer]

[%header,cols="20a,20a,60a"]
|===
|Field |Value |Description
|*Display Name* |Session Variable |Customize to display a unique name for the transformer in your application.

*XML:* `doc:name="Session Variable"`
.2+|*Operation* |Set Session Variable |Select to set a new session variable on your message (as shown in example screenshot above).

*XML:* `<set-session-variable>`
|Remove Session Variable |Select to delete an existing session variable from your message.

*XML:* `<remove-session-variable>`
|*Name* |String or Mule Expression |Specify the name for the session variable that you are creating, or identify the name of the session variable that you are removing. If you are removing session variables, this field accepts a wildcard "*" character.

*XML:* `variableName="MyNewSessionVariableName"`
|*Value* |String or Mule Expression |Mule displays this field only if you are setting a new session variable. Specify the value using either a string or a Mule expression.

*XML:* `value="MyNewSessionVariableValue"`
|*MIME Encoding* |Drop-down menu |(Optional) Set MIME encoding language.

*XML:* `encoding="value"`
|*MIME Type* |Drop-down menu |(Optional) Set MIME type.

*XML:* `mimeType="value"`
|===
....
[tab,title="XML Editor or Standalone"]
....

[source, xml, linenums]
----
# Set session variable

<set-session-variable variableName="MyNewSessionVariableName" value="MyNewSessionVariableValue" doc:name="Session Variable"/>

# Remove session variable
<remove-session-variable variableName="NameofSessionVariabletoRemove" doc:name="Session Variable"/>
----

[%header%autowidth.spread]
|===
|Element |Description
|*set-session-variable* |Set a new variable on your message (as shown in example above).
|*remove-session-variable* |Delete an existing variable from your message.
|===

[%header,cols="2*"]
|===
|Element Attribute |Description
|*doc:name* a|
Customize to display a unique name for the transformer in your application.

Note: Attribute not required in Mule Standalone configuration.

|*variableName* a|
The name of the session variable that you are setting or removing. Can be a string or a Mule expression.

Note: If you are using the remove-session-variable element, you may use a wildcard "*" character. For example, a remove-session-variable transformer with the element `variableName="http.*"` removes all variables whose names begin with "http." from the message.

|*value* |The value of the session variable that you are setting. This attribute is only relevant for the set-session-variable element. Can be a string or a Mule expression.
|===
....
------

== 示例

在很多情况下，消息通过多个流，应用程序甚至服务器。在这种情况下，将某种类型的元数据附加到消息中以便从所有系统的源头到最终目的地进行跟踪会很有用。在下面的例子中，我们设置了一个名为messageID的会话变量。此messageID包含一个唯一标识符，该标识符在消息的整个生命周期内保留（除非它被另一个会话变量转换器明确删除）。

[tabs]
------
[tab,title="Studio Visual Editor"]
....

The following example shows use of Mule Expression Language to set a value to the messageID variable. The MEL statement is:

[source]
----
#[java.util.UUID.randomUUID().toString()]
----

image:session_trans_example.png[session_trans_example] +
....
[tab,title="XML Editor or Standalone"]
....

[source, xml, linenums]
----
<http:listener-config name="HTTP_Listener_Configuration"
host="localhost" port="8081" doc:name="HTTP Listener Configuration"/>
<flow name="SessionVariableTransformingFlow">
    <http:listener config-ref="HTTP_Listener_Configuration"
    path="/" doc:name="HTTP"/>
    <set-session-variable variableName="messageID"
    value="#[java.util.UUID.randomUUID().toString()]"
    doc:name="Session Variable"/>
    <logger message="Variable set with #[sessionVars.messageID]"
    level="INFO" doc:name="Logger"/>
    <remove-session-variable variableName="NameofSessionVariabletoRemove"
    doc:name="Session Variable"/>
</flow>
----
....
------

== 完整的代码示例

以下示例设置并删除会话变量。

流：

image:session-variable-flow.png[会话变流]

[source, xml, linenums]
----
include::_sources/session-variable-transformer-reference.xml[]
----

== 另请参阅

* 请参阅 link:/mule-user-guide/v/3.8/mule-concepts[骡子概念]以了解有关消息范围的更多信息。
* 阅读相关转换器 link:/mule-user-guide/v/3.8/variable-transformer-reference[可变变压器]和 link:/mule-user-guide/v/3.8/property-transformer-reference[属性变压器]，您可以使用它们为不同范围设置属性和变量。
* 了解如何使用Mule表达式语言使用`sessionVars`地图读取会话变量。




